calculate various tech indicators and export to es